--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -21,6 +21,8 @@
     <add key="Uri" value="http://172.19.115.33/Appclusive/" />
     <add key="ExtensionsFolder" value="..\..\..\biz.dfch.CS.Appclusive.Scheduler.Extensions\bin\Debug" />
     <add key="PluginTypes" value="*" />
+    <add key="ExternalWorkflowManagementUriName" value="biz.dfch.PS.Activiti.Client.Setting" />
+    <add key="PowerShellScriptManagementUriName" value="biz.dfch.CS.Appclusive.Scheduler.Plugins.PowerShellScript" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
